attributions and docs updated

--- a/public/attributions.html
+++ b/public/attributions.html
@@ -1,3 +1,14 @@
-<a href="https://www.flaticon.com/free-icons/sushi" title="sushi icons">
-  Sushi icons created by Freepik - Flaticon
-</a>
+<h1>Icons and Sound Attributions</h1>
+<p>
+  Sushi icons created by
+  <a href="https://www.flaticon.com/free-icons/sushi" title="sushi icons">
+    Freepik - Flaticon
+  </a>
+</p>
+<p>
+  Music by
+  <a
+    href="https://pixabay.com/music//?utm_source=link-attribution&utm_medium=referral&utm_campaign=music&utm_content=195403"
+    >Pixabay</a
+  >
+</p>
